[tool.poetry]
name = "pycircos"
version = "0.1.0"
description = "A package package to make circos plots"
authors = ["jtb324 <james.baker@vanderbilt.edu>"]
license = "GNU General Public License"

[tool.poetry.dependencies]
python = "^3.7.1, <3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"
matplotlib = "^3.5.0"
biopython = "^1.79"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
